# MagicBox

./: .gitignore  README.md
docs/: ROADMAP.md
server/: .env.example  Cargo.toml  README.md
server/providers/: README.md
server/providers/deepseek/: README.md
server/routes/: README.md
server/services/: README.md
server/src/: app.rs  error.rs  main.rs
server/src/providers/: deepseek.rs  mod.rs
server/src/routes/: health.rs  mod.rs
server/src/routes/tools/: base64.rs  hash.rs  json_format.rs  md5.rs  mod.rs  timestamp.rs  translate.rs
server/tools/detect/: README.md
server/tools/hash/: README.md
server/tools/hash_md5/: README.md
server/tools/json_format/: README.md
server/tools/timestamp/: README.md
server/tools/translate/: README.md
web/: README.md
web/public/: 404.html  index.html
