[package]
name = "magicbox-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
dotenvy = "0.15"
md5 = "0.7"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
async-trait = "0.1"
http = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
